--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Intro.html"><strong aria-hidden="true">1.1.</strong> 语言</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn-language/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Markdown</a></li><li class="chapter-item expanded "><a href="learn-language/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> JavaScript</a></li></ol></li><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.2.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.2.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.3.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.4.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.4.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.4.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.4.3.</strong> Git</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> qBittorent</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,137 +175,6 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="我的笔记"><a class="header" href="#我的笔记">我的笔记</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="language-learn"><a class="header" href="#language-learn">language learn</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="markdown"><a class="header" href="#markdown">markdown</a></h1>
-<p>Markdown 是一种可以使用普通文本编辑器编写的标记语言，通过简单的标记语法，它可以使普通文本内容具有一定的格式。</p>
-<ol>
-<li>编辑器的使用</li>
-</ol>
-<p><code>vscode</code>或者 <code>typora</code></p>
-<p><a href="https://typora.io/">typora</a>付费的 markdown 专用编辑器</p>
-<ol start="2">
-<li>插件安装</li>
-</ol>
-<pre><code class="language-sh">Markdown shortcuts
-Auto-Open Markdown Preview
-Markdown All in One
-</code></pre>
-<h2 id="markdown-常用语法"><a class="header" href="#markdown-常用语法">markdown 常用语法</a></h2>
-<ol>
-<li>标题</li>
-</ol>
-<p>使用 # 号可表示 1-6 级标题</p>
-<pre><code class="language-markdown"># 一级标题
-
-## 二级标题
-
-### 三级标题
-
-...
-</code></pre>
-<ol start="2">
-<li>段落</li>
-</ol>
-<ul>
-<li>字体</li>
-</ul>
-<pre><code class="language-markdown">_斜体文字_
-
-**粗体文字**
-
-**_粗斜体文字_**
-</code></pre>
-<ul>
-<li>分割线</li>
-</ul>
-<pre><code class="language-markdown">---
-</code></pre>
-<hr />
-<ul>
-<li>删除线</li>
-</ul>
-<pre><code class="language-markdown">~~Delete~~
-</code></pre>
-<p><del>Delete</del></p>
-<ul>
-<li>下划线</li>
-</ul>
-<pre><code class="language-markdown">&lt;u&gt;text&lt;/u&gt;
-</code></pre>
-<p><code>&lt;u&gt;</code>text<code>&lt;/u&gt;</code></p>
-<ul>
-<li>脚注</li>
-</ul>
-<pre><code class="language-markdown">[^text]：
-</code></pre>
-<p><sup class="footnote-reference"><a href="#text">1</a></sup>：脚注</p>
-<ol start="3">
-<li>列表</li>
-</ol>
-<ul>
-<li>无序列表</li>
-</ul>
-<pre><code class="language-markdown">- 第一项
-- 第二项
-- 第三项
-</code></pre>
-<ul>
-<li>有序列表</li>
-</ul>
-<pre><code class="language-markdown">1. 第一项
-2. 第二项
-3. 第三项
-</code></pre>
-<ul>
-<li>列表嵌套</li>
-</ul>
-<pre><code class="language-markdown">1. 第一项：
-   - 第一项嵌套的第一个元素
-   - 第一项嵌套的第二个元素
-</code></pre>
-<ol start="4">
-<li>代码框</li>
-</ol>
-<pre><code class="language-markdown">```python
-print('Markdown')
-    def test():
-        print('Markdown test!')
-```
-</code></pre>
-<pre><code class="language-javascript">$(document).read(function () {
-  alert(&quot;Markdown&quot;);
-});
-</code></pre>
-<ol start="5">
-<li>链接</li>
-</ol>
-<pre><code class="language-markdown">[链接名称](链接地址)
-</code></pre>
-<ul>
-<li>高级链接</li>
-</ul>
-<pre><code class="language-markdown">[Markdown][markdown]
-[markdown]: http://www.markdown.com
-</code></pre>
-<ol start="6">
-<li>图片</li>
-</ol>
-<pre><code class="language-markdown">![alt 属性文本](图片地址)
-![alt 属性文本](图片地址 &quot;可选标题&quot;)
-</code></pre>
-<ol start="7">
-<li>表格</li>
-</ol>
-<pre><code class="language-markdown">| 表头   | 表头   |
-| ------ | ------ |
-| 单元格 | 单元格 |
-| 单元格 | 单元格 |
-</code></pre>
-<div class="table-wrapper"><table><thead><tr><th>表头</th><th>表头</th></tr></thead><tbody>
-<tr><td>单元格</td><td>单元格</td></tr>
-<tr><td>单元格</td><td>单元格</td></tr>
-</tbody></table>
-</div><div style="break-before: page; page-break-before: always;"></div><h1 id="javascript"><a class="header" href="#javascript">JavaScript</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="tool-use"><a class="header" href="#tool-use">tool use</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="powershell"><a class="header" href="#powershell">Powershell</a></h1>
 <h2 id="一开启-powershell"><a class="header" href="#一开启-powershell">一.开启 powershell</a></h2>
@@ -901,94 +770,47 @@ sudo apt full-upgrade
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="linux"><a class="header" href="#linux">linux</a></h1>
 <h2 id="常用命令-1"><a class="header" href="#常用命令-1">常用命令</a></h2>
-<ul>
-<li>列出当前目录下文件</li>
-</ul>
-<pre><code class="language-sh">ls
+<ol>
+<li>以 root 权限执行</li>
+</ol>
+<pre><code class="language-sh">sudo #
 </code></pre>
-<ul>
-<li>输出当前目录</li>
-</ul>
-<pre><code class="language-sh">pwd
+<ol start="2">
+<li>文件</li>
+</ol>
+<pre><code class="language-sh">ls #列出当前目录下文件
+pwd #输出当前目录
+cd #改变目录
+mkdir #新建目录
+cat #显示文件内容
+rm #删除目录
+mv #移动目录
+cp #复制目录
 </code></pre>
-<ul>
-<li>改变目录</li>
-</ul>
-<pre><code class="language-sh">cd 
+<p>显示在终端输入内容</p>
+<pre><code class="language-sh">echo #
 </code></pre>
-<ul>
-<li>新建目录</li>
-</ul>
-<pre><code class="language-sh">mkdir
+<p>读取系统时间</p>
+<pre><code class="language-sh">date #
 </code></pre>
-<ul>
-<li>显示文件内容</li>
-</ul>
-<pre><code class="language-sh">cat
+<p>全面搜索正则表达式</p>
+<pre><code class="language-sh">grep #
 </code></pre>
-<ul>
-<li>删除目录</li>
-</ul>
-<pre><code class="language-sh">rm
+<p>显示命令使用手册</p>
+<pre><code class="language-sh">man #
 </code></pre>
-<ul>
-<li>移动目录</li>
-</ul>
-<pre><code class="language-sh">mv
-</code></pre>
-<ul>
-<li>复制目录</li>
-</ul>
-<pre><code class="language-sh">cp
-</code></pre>
-<ul>
-<li>显示在终端输入内容</li>
-</ul>
-<pre><code class="language-sh">echo
-</code></pre>
-<ul>
-<li>读取系统时间</li>
-</ul>
-<pre><code class="language-sh">date
-</code></pre>
-<ul>
-<li>全面搜索正则表达式</li>
-</ul>
-<pre><code class="language-sh">grep
-</code></pre>
-<ul>
-<li>显示命令使用手册</li>
-</ul>
-<pre><code class="language-sh">man
-</code></pre>
-<ul>
-<li>以root权限执行</li>
-</ul>
-<pre><code class="language-sh">sudo
-</code></pre>
-<ul>
-<li>运行</li>
-</ul>
-<pre><code class="language-sh">./program
-</code></pre>
-<ul>
-<li>安装软件包</li>
-</ul>
+<p>安装软件包</p>
 <pre><code class="language-sh">apt-get
 </code></pre>
-<ul>
-<li>退出</li>
-</ul>
+<p>退出</p>
 <pre><code class="language-sh">exit
 </code></pre>
-<ul>
-<li>重新启动</li>
-</ul>
+<p>重新启动</p>
 <pre><code class="language-sh">reboot
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="vim-1"><a class="header" href="#vim-1">vim</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="git-1"><a class="header" href="#git-1">git</a></h1>
-<h2 id="下载git"><a class="header" href="#下载git">下载git</a></h2>
+<h2 id="下载-git"><a class="header" href="#下载-git">下载 git</a></h2>
 <pre><code class="language-sh">sudo apt update
 sudo apt install git
 </code></pre>
