--- a/print.html
+++ b/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter9.html"><strong aria-hidden="true">1.1.9.</strong> winget</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li><li class="chapter-item expanded "><a href="linux/Chapter5.html"><strong aria-hidden="true">1.3.5.</strong> docker</a></li><li class="chapter-item expanded "><a href="linux/Chapter6.html"><strong aria-hidden="true">1.3.6.</strong> clash</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="Intro.html"><strong aria-hidden="true">1.</strong> 我的笔记</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Intro.html"><strong aria-hidden="true">1.1.</strong> 工具</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="tool-usage/Chapter1.html"><strong aria-hidden="true">1.1.1.</strong> Powershell</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter2.html"><strong aria-hidden="true">1.1.2.</strong> Git</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter3.html"><strong aria-hidden="true">1.1.3.</strong> Docker</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter4.html"><strong aria-hidden="true">1.1.4.</strong> wireguard</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter5.html"><strong aria-hidden="true">1.1.5.</strong> vim</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter6.html"><strong aria-hidden="true">1.1.6.</strong> oh-my-posh</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter7.html"><strong aria-hidden="true">1.1.7.</strong> nano</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter8.html"><strong aria-hidden="true">1.1.8.</strong> nodejs</a></li><li class="chapter-item expanded "><a href="tool-usage/Chapter9.html"><strong aria-hidden="true">1.1.9.</strong> winget</a></li></ol></li><li class="chapter-item expanded "><a href="web-develop/Intro.html"><strong aria-hidden="true">1.2.</strong> 搭建</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="web-develop/Chapter1.html"><strong aria-hidden="true">1.2.1.</strong> mdbook</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter2.html"><strong aria-hidden="true">1.2.2.</strong> react</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter3.html"><strong aria-hidden="true">1.2.3.</strong> openwrt</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter4.html"><strong aria-hidden="true">1.2.4.</strong> hexo</a></li><li class="chapter-item expanded "><a href="web-develop/Chapter5.html"><strong aria-hidden="true">1.2.5.</strong> github-pages</a></li></ol></li><li class="chapter-item expanded "><a href="linux/Intro.html"><strong aria-hidden="true">1.3.</strong> linux</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="linux/Chapter1.html"><strong aria-hidden="true">1.3.1.</strong> linux</a></li><li class="chapter-item expanded "><a href="linux/Chapter2.html"><strong aria-hidden="true">1.3.2.</strong> vim</a></li><li class="chapter-item expanded "><a href="linux/Chapter3.html"><strong aria-hidden="true">1.3.3.</strong> Git</a></li><li class="chapter-item expanded "><a href="linux/Chapter4.html"><strong aria-hidden="true">1.3.4.</strong> qbitorrent</a></li><li class="chapter-item expanded "><a href="linux/Chapter5.html"><strong aria-hidden="true">1.3.5.</strong> docker</a></li><li class="chapter-item expanded "><a href="linux/Chapter6.html"><strong aria-hidden="true">1.3.6.</strong> clash</a></li></ol></li><li class="chapter-item expanded "><a href="learn/Intro.html"><strong aria-hidden="true">1.4.</strong> learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Intro.html"><strong aria-hidden="true">1.4.1.</strong> react</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/react/Chapter1.html"><strong aria-hidden="true">1.4.1.1.</strong> 组件分类</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter2.html"><strong aria-hidden="true">1.4.1.2.</strong> jsx语法</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter3.html"><strong aria-hidden="true">1.4.1.3.</strong> 事件绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter4.html"><strong aria-hidden="true">1.4.1.4.</strong> 响应式数据</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter5.html"><strong aria-hidden="true">1.4.1.5.</strong> 条件渲染和列表循环</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter6.html"><strong aria-hidden="true">1.4.1.6.</strong> 表单绑定</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter7.html"><strong aria-hidden="true">1.4.1.7.</strong> props和组件间传值插槽</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter8.html"><strong aria-hidden="true">1.4.1.8.</strong> 样式操作</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter9.html"><strong aria-hidden="true">1.4.1.9.</strong> 生命周期</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter10.html"><strong aria-hidden="true">1.4.1.10.</strong> -ref和context</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter11.html"><strong aria-hidden="true">1.4.1.11.</strong> 函数组件和hooks</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter12.html"><strong aria-hidden="true">1.4.1.12.</strong> 高阶组件</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter13.html"><strong aria-hidden="true">1.4.1.13.</strong> 性能问题和优化</a></li><li class="chapter-item expanded "><a href="learn/react/Chapter14.html"><strong aria-hidden="true">1.4.1.14.</strong> -router的使用</a></li></ol></li><li class="chapter-item expanded "><a href="learn/vue/Intro.html"><strong aria-hidden="true">1.4.2.</strong> vue</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/vue/Chapter1.html"><strong aria-hidden="true">1.4.2.1.</strong> 组件</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter2.html"><strong aria-hidden="true">1.4.2.2.</strong> 指令</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter3.html"><strong aria-hidden="true">1.4.2.3.</strong> 过滤器</a></li><li class="chapter-item expanded "><a href="learn/vue/Chapter4.html"><strong aria-hidden="true">1.4.2.4.</strong> 路由</a></li></ol></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -896,6 +896,107 @@ npm -v # 应该打印 `10.8.2`】
 <div style="break-before: page; page-break-before: always;"></div><h1 id="openwrt"><a class="header" href="#openwrt">openwrt</a></h1>
 <h2 id="安装镜像"><a class="header" href="#安装镜像">安装镜像</a></h2>
 <p><a href="https://openwrt.ai/?target=x86%2F64&amp;id=generic">镜像站</a></p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="hexo"><a class="header" href="#hexo">HEXO</a></h1>
+<h3 id="安装-1"><a class="header" href="#安装-1">安装</a></h3>
+<pre><code class="language-sh">npm install -g hexo-cli
+hexo init &lt;folder&gt;
+cd &lt;folder&gt;
+npm install
+</code></pre>
+<h3 id="目录结构"><a class="header" href="#目录结构">目录结构</a></h3>
+<pre><code>.
+├── _config.yml
+├── package.json
+├── scaffolds
+├── source
+|   ├── _drafts
+|   └── _posts
+└── themes
+</code></pre>
+<h3 id="themes"><a class="header" href="#themes">themes</a></h3>
+<ol>
+<li>Redefine</li>
+</ol>
+<p><a href="https://redefine-docs.ohevan.com/introduction">Redefine-docs</a></p>
+<h3 id="github-pages"><a class="header" href="#github-pages">github pages</a></h3>
+<p>在<code>.github/workflows</code>目录下创建<code>pages.yml</code>文件，内容如下：</p>
+<pre><code class="language-yaml">name: pages
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  pages:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - uses: actions/cache@v3
+        with:
+          path: &quot;**/node_modules&quot;
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.OS }}-npm-cache-
+
+      - run: npm install
+      - run: npm run build
+
+      - name: Deploy to github pages
+        uses: crazy-max/ghaction-github-pages@v3.1.0
+        with:
+          target_branch: gh-pages
+          build_dir: public
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+</code></pre>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="github-pages-1"><a class="header" href="#github-pages-1">github-pages</a></h1>
+<p><img src="web-develop/./images/github-pages.png" alt="GitHub Pages" /></p>
+<p>修改这两者的配置，就可以使用 GitHub Pages 托管自己的静态网站了。</p>
+<p>在<code>.github/workflows</code>目录下创建<code>pages.yml</code>文件</p>
+<p><strong>常见配置</strong></p>
+<pre><code class="language-yaml">name: pages 
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
+
+jobs:
+  pages:
+    runs-on: ubuntu-latest  # 运行环境
+    steps:
+      - uses: actions/checkout@v3   # 克隆代码
+
+      - uses: actions/setup-node@v3  # 安装node环境
+        with:
+          node-version: 18  # node版本
+
+      - uses: actions/cache@v3      # 缓存node_modules
+        with:
+          path: &quot;**/node_modules&quot;   # 缓存路径
+          key: ${{ runner.OS }}-npm-cache-${{ hashFiles('**/package-lock.json') }}  # 缓存key
+          restore-keys: ${{ runner.OS }}-npm-cache-  # 缓存key
+
+      - run: npm install       # 安装依赖
+      - run: npm run build    # 编译静态文件
+
+      - name: Deploy to github pages    # 部署到github pages
+        uses: crazy-max/ghaction-github-pages@v3.1.0    # 使用ghaction-github-pages
+        with:   
+          target_branch: gh-pages      # 部署分支
+          build_dir: public            # 编译后的静态文件目录
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 令牌
+</code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="树莓派"><a class="header" href="#树莓派">树莓派</a></h1>
 <ol>
 <li>安装 Raspberry Pi Imager</li>
